--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
@@ -41,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "jest": "^30.0.5",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.0.5",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
