--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest": "^30.0.5",
     "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.0.5",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.0",
